[package]
name = "betwall"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "betwall"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[target.'cfg(windows)'.dependencies]
tray-icon = "0.19"
tao = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
hmac = "0.12"
sha1 = "0.10"
base32 = "0.5"
getrandom = "0.2"
self_update = { version = "0.41", default-features = false, features = ["rustls", "archive-zip", "compression-zip-deflate"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Variant",
]
